--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,15 @@ xmlns:tools="http://schemas.android.com/tools">
     android:allowBackup="true"
     android:dataExtractionRules="@xml/data_extraction_rules"
     android:fullBackupContent="@xml/backup_rules"
-    android:icon="@mipmap/ic_launcher"
+    android:icon="@mipmap/ic_chat"
     android:label="@string/app_name"
-    android:roundIcon="@mipmap/ic_launcher_round"
+    android:roundIcon="@mipmap/ic_chat"
     android:supportsRtl="true"
     android:theme="@style/Theme.RxJavaSample"
     tools:targetApi="31">
     <activity
         android:name=".presentation.MainActivity"
+        android:configChanges="locale|orientation"
         android:exported="true">
         <nav-graph android:value="@navigation/nav_graph" />
         <intent-filter>
